--- a/src/index.template.html
+++ b/src/index.template.html
@@ -14,6 +14,10 @@
     <link rel="icon" type="image/png" sizes="32x32" href="statics/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="statics/icons/favicon-16x16.png">
     <link rel="icon" type="image/ico" href="statics/icons/favicon.ico">
+    <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+    <script type="text/javascript">
+      VK.init({apiId: 603539});
+    </script>    
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
